--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
+  <link rel="hoja de estilo" type="text/css" href="style.css">
   <title>Mi Sitio Web</title>
 </head>
 <body>
