--- a/index.html
+++ b/index.html
@@ -1,10 +1,23 @@
-<!DOCTYPE html>
-<html>
-<head>
-  <link rel="hoja de estilo" type="text/css" href="style.css">
-  <title>Mi Sitio Web</title>
-</head>
-<body>
-  <h1>Bienvenido a mi sitio web</h1>
-</body>
-</html>
+  +---------------------------------------+
+  |               Cabecera               |
+  +---------------------------------------+
+  |  Logotipo  |  Menú de navegación    |
+  +---------------------------------------+
+  |               Presentación          |
+  |  [Imagen de fondo con texto]          |
+  |  Bienvenidos a Soluciones Eléctricas  |
+  |  [Llamada a acción]                   |
+  +---------------------------------------+
+  |               Servicios             |
+  |  [Tarjeta de servicio 1]              |
+  |  [Tarjeta de servicio 2]              |
+  |  [Tarjeta de servicio 3]              |
+  +---------------------------------------+
+  |               Testimonios          |
+  |  [Texto de testimonio 1]              |
+  |  [Texto de testimonio 2]              |
+  +---------------------------------------+
+  |               Pie de página         |
+  |  Información de contacto             |
+  |  Redes sociales                      |
+  +---------------------------------------+
