--- a/index.html
+++ b/index.html
@@ -1,23 +1,49 @@
-  +---------------------------------------+
-  |               Cabecera               |
-  +---------------------------------------+
-  |  Logotipo  |  Menú de navegación    |
-  +---------------------------------------+
-  |               Presentación          |
-  |  [Imagen de fondo con texto]          |
-  |  Bienvenidos a Soluciones Eléctricas  |
-  |  [Llamada a acción]                   |
-  +---------------------------------------+
-  |               Servicios             |
-  |  [Tarjeta de servicio 1]              |
-  |  [Tarjeta de servicio 2]              |
-  |  [Tarjeta de servicio 3]              |
-  +---------------------------------------+
-  |               Testimonios          |
-  |  [Texto de testimonio 1]              |
-  |  [Texto de testimonio 2]              |
-  +---------------------------------------+
-  |               Pie de página         |
-  |  Información de contacto             |
-  |  Redes sociales                      |
-  +---------------------------------------+
+  <!DOCTYPE html>
+<html>
+<head>
+  <title>Soluciones Eléctricas</title>
+  <link rel="stylesheet" type="text/css" href="style.css">
+</head>
+<body>
+  <!-- Cabecera -->
+  <header>
+    <img src="imagenes/logotipo.png" alt="Logotipo">
+    <nav>
+      <ul>
+        <li><a href="#servicios">Servicios</a></li>
+        <li><a href="#contacto">Contacto</a></li>
+      </ul>
+    </nav>
+  </header>
+  
+  <!-- Presentación -->
+  <section id="presentacion">
+    <h1>Bienvenidos a Soluciones Eléctricas</h1>
+    <p>Texto de presentación</p>
+  </section>
+  
+  <!-- Servicios -->
+  <section id="servicios">
+    <h2>Servicios</h2>
+    <div class="tarjeta-servicio">
+      <h3>Servicio 1</h3>
+      <p>Descripción del servicio</p>
+    </div>
+    <div class="tarjeta-servicio">
+      <h3>Servicio 2</h3>
+      <p>Descripción del servicio</p>
+    </div>
+  </section>
+  
+  <!-- Contacto -->
+  <section id="contacto">
+    <h2>Contacto</h2>
+    <p>Información de contacto</p>
+  </section>
+  
+  <!-- Pie de página -->
+  <footer>
+    <p>&copy; 2024 Soluciones Eléctricas</p>
+  </footer>
+</body>
+</html>
